<resources>
    <string name="app_name">Prac9</string>
    <string name="file_name">Имя файла</string>
    <string name="write_file_content">Введите содержимое файла</string>
    <string name="save">Сохранить</string>
    <string name="read">Прочитать</string>
    <string name="delete">Удалить</string>
    <string name="add_info_to_file">Добавить информацию в файл</string>
    <string name="file_content">Содержимое файла</string>
</resources>